--- a/styles.css
+++ b/styles.css
@@ -21,8 +21,12 @@ justify-content: space-between;
     /* Shorthand */
     border: black 4px solid;
 
-    padding: 10px;
-    margin: 10px;
+    padding: 100px;
+    margin: 100px;
+    font-size: 50px;
+    font-weight: bold;
+    background-color: rgba(0, 251, 255, 0.664);
+    
 
 }
 
